sumo/tests/duarouter/alternatives/style2_input/errors/routealt/routealt_last_false/errors.duarouter
Error: Attribute 'last' in definition of route '!1' is not an int.
Quitting (on error).
